[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "ex_block"
path = "examples/block.rs"
[[example]]
name = "blockchain"
path = "examples/blockchain.rs"

[dependencies]
serde = {version = "1.0" , features = ["derive"]}
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sled="0.34"
bincode="1.3.3"
sha3="0.10"
hex="0.4"
utils = {path="../utils"}

