[package]
name = "network"
version = "0.1.0"
edition = "2021"

[[example]]
name = "p2p"
path = "examples/p2p.rs"

[dependencies]
async-std = "1.12"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
libp2p = { version = "0.53", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde_json="1"
serde={ version = "1.0", features = ["derive"] }