[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0" , features = ["derive"] }
secp256k1={version = "0.29",features = ["recovery"]}
bincode = "1.3.3"
rust-crypto = "0.2.36"
thiserror = "1.0.59"
anyhow = "1.0.82"
sled = "0.34"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4.3"
rand= "0.8.5"